fix: make deployment lifecycle timestamps deterministic